--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>R$H</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
+
   <body>
   <header>
-    
+      <nav>
+        <a href="#about">About Me</a>
+        <a href="#experience">Experience</a>
+        <a href="#skills">Skills</a>
+    </nav>
   </header>
-  <section id='aboutme'>
-    <p>Welcome!</p>
-    <p>Let me introduce my self </p>
-    <p>My name is RANDRIANIRINA Stephan Hernandez.I'm student from ENI ,Aspiring IT enthusiast diving into systems, networks, and cybersecurity, with a passion for Linux and open-source applications.</p>
+  <section id="welcome">
+    <h2>Welcome!</h2>
+    <p>Thank you for visiting my portfolio!
+        Feel free to explore the sections below to learn more about me, my experience, and the skills I possess.
+        Click on any link in the menu to jump to the section that interests you the most!</p>
   </section>
+
+  <section id='about'>
+    <h2>About Me</h2>
+    <p>My name is RANDRIANIRINA Stephan Hernandez.
+        I'm a student at ENI, an aspiring IT enthusiast diving into systems, networks, and cybersecurity,
+        with a passion for Linux and open-source applications.</p>
+  </section>
+
+  <section id='experience'>
+    <h2>Experience</h2>
+    <p>Here you can add details about your work experience, internships, or projects.</p>
+  </section>
+
+  <section id='skills'>
+    <h2>Skills</h2>
+    <p>List your skills here, such as programming languages, tools, and technologies you are familiar with.</p>
+</section>
   </body>
 </html>
