refactor: update path

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Portfolio</title>
-  <link rel="icon" type="image/png" href="./rsh.png">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="assets/images/rsh.png">
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
   <header class="navbar">
@@ -32,7 +32,7 @@
       <a href="#" class="cta-button">Let’s get started &nbsp; ›</a>
     </div>
     <div class="hero-image">
-      <img src="./IMG-20250309-WA0000.jpg" alt="Profile photo" />
+      <img src="assets/images/profil.jpg" alt="Profile photo" />
     </div>
   </main>
 
