refactor: update footer

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     </div>
   </main>
 
-  <section class="brands">
-    <p>Worked with</p>
-    <div class="brand-logos">
-      <img src="clickup-logo.png" alt="ClickUp" />
-      <img src="dropbox-logo.png" alt="Dropbox" />
-      <img src="paychex-logo.png" alt="Paychex" />
-      <img src="elastic-logo.png" alt="Elastic" />
-      <img src="stripe-logo.png" alt="Stripe" />
-    </div>
-  </section>
+  <!-- <section class="brands"> -->
+  <!--   <p>Worked with</p> -->
+  <!--   <div class="brand-logos"> -->
+  <!--     <img src="clickup-logo.png" alt="ClickUp" /> -->
+  <!--     <img src="dropbox-logo.png" alt="Dropbox" /> -->
+  <!--     <img src="paychex-logo.png" alt="Paychex" /> -->
+  <!--     <img src="elastic-logo.png" alt="Elastic" /> -->
+  <!--     <img src="stripe-logo.png" alt="Stripe" /> -->
+  <!--   </div> -->
+  <!-- </section> -->
 
   <!-- FontAwesome for icons -->
   <script src="https://kit.fontawesome.com/yourkitcode.js" crossorigin="anonymous"></script>
