refactor: update navbar

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <nav>
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Case Studies</a></li>
-        <li><a href="#">Testimonials</a></li>
-        <li><a href="#">Recent Work</a></li>
-        <li><a href="#">Get In Touch</a></li>
+        <li><a href="#">Educatiion</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Experience</a></li>
+        <li><a href="#">About me</a></li>
       </ul>
       <div class="social-icons">
         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
