feat: add social media icon

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <li><a href="#">About me</a></li>
       </ul>
       <div class="social-icons">
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#"><i class="fa-brands fa-behance"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/rsthernandez/"><img src="assets/gif/linkedin.gif" alt="linkedin-icon"></a>
+        <a href="https://www.github.com/RStephanH"><img src="assets/gif/github.gif" alt="github-icon"></a>
+        <a href="mailto:randrianirinahernandezstephan@gmail.com"><img src="assets/gif/mail.gif" alt="mail-icon"></a>
       </div>
     </nav>
   </header>
@@ -35,19 +35,5 @@
       <img src="assets/images/profil.jpg" alt="Profile photo" />
     </div>
   </main>
-
-  <!-- <section class="brands"> -->
-  <!--   <p>Worked with</p> -->
-  <!--   <div class="brand-logos"> -->
-  <!--     <img src="clickup-logo.png" alt="ClickUp" /> -->
-  <!--     <img src="dropbox-logo.png" alt="Dropbox" /> -->
-  <!--     <img src="paychex-logo.png" alt="Paychex" /> -->
-  <!--     <img src="elastic-logo.png" alt="Elastic" /> -->
-  <!--     <img src="stripe-logo.png" alt="Stripe" /> -->
-  <!--   </div> -->
-  <!-- </section> -->
-
-  <!-- FontAwesome for icons -->
-  <script src="https://kit.fontawesome.com/yourkitcode.js" crossorigin="anonymous"></script>
 </body>
 </html>
