feat: position of social icon

--- a/index.html
+++ b/index.html
@@ -12,16 +12,11 @@
     <nav>
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Educatiion</a></li>
+        <li><a href="#">Education</a></li>
         <li><a href="#">Skills</a></li>
         <li><a href="#">Experience</a></li>
         <li><a href="#">About me</a></li>
       </ul>
-      <div class="social-icons">
-        <a href="https://www.linkedin.com/in/rsthernandez/"><img src="assets/gif/linkedin.gif" alt="linkedin-icon"></a>
-        <a href="https://www.github.com/RStephanH"><img src="assets/gif/github.gif" alt="github-icon"></a>
-        <a href="mailto:randrianirinahernandezstephan@gmail.com"><img src="assets/gif/mail.gif" alt="mail-icon"></a>
-      </div>
     </nav>
   </header>
 
@@ -33,6 +28,11 @@
     </div>
     <div class="hero-image">
       <img src="assets/images/profil.jpg" alt="Profile photo" />
+      <div class="social-icons">
+        <a href="https://www.linkedin.com/in/rsthernandez/"><img src="assets/gif/linkedin.gif" alt="linkedin-icon"></a>
+        <a href="https://www.github.com/RStephanH"><img src="assets/gif/github.gif" alt="github-icon"></a>
+        <a href="mailto:randrianirinahernandezstephan@gmail.com"><img src="assets/gif/mail.gif" alt="mail-icon"></a>
+      </div>
     </div>
   </main>
 </body>
