--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="https://www.linkedin.com/in/rsthernandez/"><img src="assets/gif/linkedin.gif" alt="linkedin-icon"></a>
         <a href="https://www.github.com/RStephanH"><img src="assets/gif/github.gif" alt="github-icon"></a>
         <a href="mailto:randrianirinahernandezstephan@gmail.com"><img src="assets/gif/mail.gif" alt="mail-icon"></a>
-        <a href="https:///www.x.com"><img src="assets/gif/x.gif" alt="X-icon"></a>
+        <a href="https://x.com/RStHernandez"><img src="assets/gif/x.gif" alt="X-icon"></a>
       </div>
     </div>
   </main>
